--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -2,13 +2,16 @@
     background-color: var(--purple);
     display: flex;
     padding: 30px;
-    margin: 50px;
+    margin: 30px ;
     border-radius: 20px ;
-    height: 290px;
+    height: 150px;
     justify-content: space-between;
     gap: 30px;
     align-items: center;
     text-align: center;
+   
+    
+    
 
     img{
         width: 20%;
@@ -19,6 +22,7 @@
     h1 {
         color: white;
         font-size: 70px;
+        margin-bottom: 0;
         .pro{
             color: var(--light-blue);
         }
@@ -34,6 +38,7 @@
     p{
         font-size: 20px;
         color: white;
+       
     }
  
 
