--- a/src/routes/landing/landing.scss
+++ b/src/routes/landing/landing.scss
@@ -1,10 +1,17 @@
 .hero{
-    background-image: url(../../assets/hero.png);
+    background-color: var(--light-purple);
     background-position: center;
     background-size: cover;
     width: 100vw;
-    height: 70%;
-
+    
+    display: flex;
+    position: relative;
+    img {
+      width: 800px;
+      position: absolute;
+      right: 70px;
+      bottom: -60px;
+    }
     .call-to-action{
         color: white;
         padding: 100px;
@@ -36,9 +43,223 @@
 .title{
     text-align: center;
     color: var(--purple);
+    margin-top: 200px;
 }
 
 .why{
     padding: 100px;
+    display: flex;
+    background-color: var(--light-purple);
+    color: var(--light-gray);
+    .why-btn {
+        background-color: var(--yellow);
+        border: 0;
+        padding: 10px 30px;
+        border-radius: 5px;
+        color: var(--purple);
+        font-weight: bold;
+        font-size: 20px;
+        width: fit-content;
+        margin-top: 30px;
+    }
+    img {
+        max-width: 700px;
+    }
+
+    .why-text {
+        padding: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
     
+}
+
+.testimonials {
+    margin-top: 100px;
+    h1 {
+        text-align: center;
+        color: var(--purple);
+    }
+    ;
+
+    .testimonial-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 30px;
+        margin-top: 100px;
+      .testimonial {
+
+            img {
+                width: 100px;
+                object-fit: contain;
+            }
+            width: 600px;
+            background-color: var(--light-gray);
+            border-radius: 100px;
+            padding:30px;
+            display: flex;
+            flex-direction: row;
+            gap: 20px;
+      }
+      .name {
+        color: var(--purple);
+        font-weight: bold;
+        margin-top: 20px;
+      }
+    }
+    
+}
+
+.available {
+    background-color: var(--light-purple);
+    margin-top: 200px;
+
+    h1 {
+        text-align: center;
+        color: var(--light-gray);
+        padding-top: 100px;
+    }
+    .course-container {
+        display: flex;
+        justify-content: center;
+        gap: 200px;
+        margin-top: 100px;
+        padding-bottom: 100px;
+        .course {
+            background-color: white;
+            border-radius: 30px;
+            width: 400px;
+            padding: 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            img {
+                width: 200px;
+            }
+        }
+    }
+    button {
+        background-color: var(--yellow);
+        color: var(--purple);
+        border-radius: 10px;
+        border: none;
+        padding: 20px;
+        margin: 0 auto;
+        display: block;
+        font-size: 20px;
+        margin-top: 60px;
+    }
+}
+.next-level {
+    border-radius: 30px;
+    border: 2px solid var(--light-gray);
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 50px;
+    margin-top: 200px;
+    .container {
+        display: flex;
+        align-items: center;
+        gap: 50px;
+        
+        h2 {
+            color: var(--light-purple);
+        }
+        h1 {
+            color: var(--blue);
+            font-size: 40px;
+        }
+        img {
+            width: 600px;
+        }
+
+        button {
+            background-color: var(--yellow);
+            color: var(--purple);
+            border: none;
+            padding: 15px;
+            font-weight: bold;
+            font-size: 20px;
+            border-radius: 10px;
+
+        }
+    }
+}
+
+footer {
+    background-color: var(--purple);
+    padding: 50px;
+    margin-top: 200px;
+    p {
+        color: var(--light-gray);
+        text-align: center;
+    }
+    .icons {
+        color: var(--light-gray);
+        margin: 10px;
+    }
+    div {
+        text-align: center;
+
+    }
+}
+
+@media screen and (max-width:900px) {
+    .container {
+        grid-template-columns: 1fr;
+        width: 100%;
+        
+        
+    }
+
+    .hero {
+        flex-direction: column-reverse;
+        position: inherit;
+        padding: 30px;
+
+        img {
+            position: inherit;
+            width: 400px;
+        }
+        .call-to-action {
+            width: 100%;
+            padding: 20px;
+        }
+    }
+
+    .card-container {
+        flex-direction: column;
+    }
+    .why {
+        flex-direction: column;
+        padding: 20px;
+        img {
+            max-width: 500px;
+        }
+    }
+    .available {
+        .course-container {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+    .next-level {
+        margin: 20px;
+        .container {
+            flex-direction: column;
+            padding: 50px;
+        
+            img {
+                width: 300px;
+                display: block;
+                margin: 0 auto;
+            }
+        }
+    }
+    .testimonials {
+        padding: 20px;
+    }
 }
